modify to pass the script test

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>图像视频</li>
           </ul>
         </nav>
-        <main class="content">
+        <div class="content">
           <!-- 1 -->
           <div class="rank">
             <div class="no">1</div>
@@ -286,7 +286,7 @@
               </div>
             </div>
           </div>
-        </main>
+        </div>
       </main>
     </div>
   </body>
