No link back to github repository found No h1 tag found No link tag found No table tags found Solve four errors

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>微信读书</title>
-    <style>
+    <!-- <style>
       @import url("./styles/index.css");
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <div class="page">
       <header>
         <div class="head">
           <img src="./imgs/back.png" alt="图片未显示" />
-          计算机榜
+          <h1>计算机榜</h1>
           <img src="./imgs/share.png" alt="图片未显示" />
         </div>
         <div class="nav-bar">
@@ -287,6 +288,26 @@
             </div>
           </div>
         </div>
+        <footer>
+          <table>
+            <tr>
+              <th>name:</th>
+              <td>微信读书</td>
+            </tr>
+            <tr>
+              <th>author:</th>
+              <td>sjh</td>
+            </tr>
+            <tr>
+              <th>仓库链接:</th>
+              <td>
+                <a href="https://github.com/PhilPlato/cs291a_project0"
+                  >click me</a
+                >
+              </td>
+            </tr>
+          </table>
+        </footer>
       </main>
     </div>
   </body>
